[package]
name = "crypter"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
anyhow = "1.0"
walkdir = "2"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
colored = "2.1"
rdev = "0.5.3"
rypes = { git = "https://github.com/D0K-ich/rypes" }
tokio = "1.52.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
