[package]
name = "crypter"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
anyhow = "1.0"
walkdir = "2"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
colored = "2.1"
rdev = "0.5.3"
rypes = { git = "https://github.com/D0K-ich/rypes" }
tokio = "1.52.3"
windows = { version = "0.62.2", features = ["Win32", "Win32_System", "Win32_Devices", "Win32_System_Com", "Win32_Devices_DeviceAndDriverInstallation", "Win32_System_Threading", "Win32_Security"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
